docs: pdate README
